Solutions/Iron Gallery Of Braavos/iron-db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    db: mariadb
  name: iron-db-service
spec:
  ports:
    - name: 3306-3306
      port: 3306
      protocol: TCP
      targetPort: 3306
  selector:
    db: mariadb
  type: ClusterIP
status:
  loadBalancer: {}
