Solutions/Iron Gallery Of Braavos/iron-gallery-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: iron-gallery-service
  name: iron-gallery-service
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: iron-gallery
  type: ClusterIP
status:
  loadBalancer: {}
